correct link to website

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -208,7 +208,7 @@
   author={Wang, Shuai and Nalisnick, Eric},
   year={2022},
   abstract={We apply active learning to help with data scarcity problems in sign languages. In partic- ular, we perform a novel analysis of the effect of pre-training. Since many sign languages are linguistic descendants of French sign language, they share hand configurations, which pre-training can hopefully exploit. We test this hypothesis on American, Chinese, German, and Irish fingerspelling corpora. We do observe a benefit from pre-training, but this may be due to visual rather than linguistic similarities.},
-  url={https://signlab-amsterdam.com/publications/Active_Learning_for_Multilingual_Fingerspelling_Corpora.pdf}
+  url={https://www.signlab-amsterdam.nl/publications/Active_Learning_for_Multilingual_Fingerspelling_Corpora.pdf}
 }
 
 @inproceedings{Roelofsen:21at4ssl,
@@ -275,5 +275,5 @@
   note={Presentation slides from a seminar given by Lyke Esselink on the work of SignLab.},
   keywords={slides},
   year={2021},
-  url={https://signlab-amsterdam.com/publications/SeminarSlides.pdf}
+  url={https://www.signlab-amsterdam.nl/publications/SeminarSlides.pdf}
 }
