--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -255,7 +255,7 @@
   year = {2020},
   keywords={bachelorsthesis},
   abstract={Hearing parents who have deaf children are often put in a difficult position. They most likely know no sign language and resources for learning are limited and expensive. Research into sign language translation and synthesis has increased in the past two decades, due to a growing interest into making public spaces and services more accessible to Deaf people.<br> This research looks at the potential of a translator from Dutch to Dutch sign language (NGT) using a sign language avatar. In particular the focus lies on the synthesis of directional verbs, a critical grammatical component of sign language. The implementation is very limited and therefore the sentences it produces are not always comprehensible and the signs do not always look natural. It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.},
-  url={https://scripties.uba.uva.nl/search?id=715794}{https://scripties.uba.uva.nl/search?id=715794}
+  url = {https://scripties.uba.uva.nl/search?id=715794}{https://scripties.uba.uva.nl/search?id=715794},
   note =  {University of Amsterdam}
 }
 
