--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -245,7 +245,7 @@
   title = {{Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands}},
   keywords={bachelorsthesis},
   abstract={This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware. Specifically, translation of Dutch into Sign Language of the Netherlands (NGT). As Dutch has been translated to a textual version of NGT in previous research, this research translated from textual NGT to synthesised NGT, the output signed by an avatar. This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources, the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression, a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers paired with interrogative and negative constructs in NGT. Although the scope of this project is limited, it could provide a decent foundation for further research.},
-  url={https://scripties.uba.uva.nl/search?id=715771}{https://scripties.uba.uva.nl/search?id=715771},
+  url={https://scripties.uba.uva.nl/search?id=715771},
   note ={University of Amsterdam}
 }
 
@@ -255,7 +255,7 @@
   year = {2020},
   keywords={bachelorsthesis},
   abstract={Hearing parents who have deaf children are often put in a difficult position. They most likely know no sign language and resources for learning are limited and expensive. Research into sign language translation and synthesis has increased in the past two decades, due to a growing interest into making public spaces and services more accessible to Deaf people.<br> This research looks at the potential of a translator from Dutch to Dutch sign language (NGT) using a sign language avatar. In particular the focus lies on the synthesis of directional verbs, a critical grammatical component of sign language. The implementation is very limited and therefore the sentences it produces are not always comprehensible and the signs do not always look natural. It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.},
-  url = {https://scripties.uba.uva.nl/search?id=715794}{https://scripties.uba.uva.nl/search?id=715794},
+  url = {https://scripties.uba.uva.nl/search?id=715794},
   note =  {University of Amsterdam}
 }
 
@@ -265,7 +265,7 @@
   title = {{Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands}},
   keywords={bachelorsthesis},
   abstract={Deaf people oftentimes have no choice but to communicate in the lingua franca of their country, despite the fact that this is a second language for them. Their ability to read and write is significantly worse than that of a hearing person. Additionally, if a deaf child is born into a family of hearing parents, it is vital that the parents communicate with the child through sign language as soon as possible, otherwise the language region of that child's brain will be underdeveloped. There are currently few resources available for people to learn Sign Language of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br> This thesis investigates what components are necessary to build a system that uses an avatar to translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on the matter, three main components are devised and implemented: software for sign language synthesis, lexical resources for encoding signs, and grammatical resources for structuring sentences. Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers correctly. However, the corpus contains a number of errors and of which manual errors and unnatural mouth signs should particularly be improved. Moreover, further research is necessary to improve the comprehensibility of signs.},
-  url={https://scripties.uba.uva.nl/search?id=715792}{https://scripties.uba.uva.nl/search?id=715792},
+  url={https://scripties.uba.uva.nl/search?id=715792},
   note =  {University of Amsterdam}
 }
 
