--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -212,7 +212,7 @@
 @article{wang:22,
   title={Active Learning for Multilingual Fingerspelling Corpora},
   author={Wang, Shuai and Nalisnick, Eric},
-  publisher={University of Amsterdam},
+  journal={University of Amsterdam},
   year={2022},
   url={https://www.signlab-amsterdam.nl/publications/Active_Learning_for_Multilingual_Fingerspelling_Corpora.pdf},
   abstract={We apply active learning to help with data scarcity problems in sign languages. In particular, we perform a novel analysis of the effect of pre-training. Since many sign languages are linguistic descendants of French sign language, they share hand configurations, which pre-training can hopefully exploit. We test this hypothesis on American, Chinese, German, and Irish fingerspelling corpora. We do observe a benefit from pre-training, but this may be due to visual rather than linguistic similarities.}
@@ -274,7 +274,7 @@
   year={2021},
   url={https://www.signlab-amsterdam.nl/publications/SeminarSlides.pdf},
   keywords={slides},
-  note={Presentation slides from a seminar given by Lyke Esselink on the work of SignLab.}
+  note={Seminar slides on the work of SignLab.}
 }
 
 @mastersthesis{gemert:22,
