--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -120,7 +120,7 @@
 @article{oomen:20,
   title={Spatial verbs are demonstration verbs},
   author={Oomen, Marloes},
-  journal={Revista Lingu{\'\i}ʃtica},
+  journal={Revista Lingu{\'\i}stica},
   volume={16},
   number={3},
   pages={227--249},
@@ -209,10 +209,10 @@
   abstract={The Routledge Handbook of Theoretical and Experimental Sign Language Research bridges the divide between theoretical and experimental approaches to provide an up-to-date survey of key topics in sign language research. With 29 chapters written by leading and emerging scholars from around the world, this Handbook covers the following key areas: On the theoretical side, all crucial aspects of sign language grammar studied within formal frameworks such as Generative Grammar;　　 On the experimental side, theoretical accounts are supplemented by experimental evidence gained in psycho- and neurolinguistic studies;　 On the descriptive side, the main phenomena addressed in the reviewed scholarship are summarized in a way that is accessible to readers without previous knowledge of sign languages. Each chapter features an introduction, an overview of existing research, and a critical assessment of hypotheses and findings. The Routledge Handbook of Theoretical and Experimental Sign Language Research is key reading for all advanced students and researchers working at the intersection of sign language research, linguistics, psycholinguistics, and neurolinguistics.}
 }
 
-@article{wang:22,
+@inproceedings{wang:22,
   title={Active Learning for Multilingual Fingerspelling Corpora},
   author={Wang, Shuai and Nalisnick, Eric},
-  journal={University of Amsterdam},
+  booktitle    = {Adaptive Experimental Design and Active Learning in the Real World},
   year={2022},
   url={https://www.signlab-amsterdam.nl/publications/Active_Learning_for_Multilingual_Fingerspelling_Corpora.pdf},
   abstract={We apply active learning to help with data scarcity problems in sign languages. In particular, we perform a novel analysis of the effect of pre-training. Since many sign languages are linguistic descendants of French sign language, they share hand configurations, which pre-training can hopefully exploit. We test this hypothesis on American, Chinese, German, and Irish fingerspelling corpora. We do observe a benefit from pre-training, but this may be due to visual rather than linguistic similarities.}
