--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -221,9 +221,11 @@
 @inproceedings{Roelofsen:21a,
   title = {Online evaluation of text-to-sign translation by deaf end users: Some methodological recommendations},
 	author = {Roelofsen, Floris and Esselink, Lyke and Mende-Gillings, Shani and Meulder, Maartje de and Sijm, Nienke and Smeijers, Anika},
-	booktitle = {First International Workshop on Automatic Translation for Sign and Spoken Languages (AT4SSL)},
-	pages = {82-87},
+	booktitle = {Proceedings of the First International Workshop on Automatic Translation for Sign and Spoken Languages (AT4SSL)},
+  publisher = {Association for Machine Translation in the Americas},
+  pages = {82--87},
   year = {2021},
+  address = {Virtual},
 	url = {https://aclanthology.org/2021.mtsummit-at4ssl.9/},
   abstract = {{We present a number of methodological recommendations concerning the online evaluation of avatars for text-to-sign translation, focusing on the structure, format and length of the questionnaire, as well as methods for eliciting and faithfully transcribing responses.}}
 }
@@ -232,10 +234,24 @@
   title = {Sign language translation in a healthcare setting},
   author = {Roelofsen, Floris and Esselink, Lyke and Mende-Gillings, Shani and Smeijers, Anika},
 	booktitle = {Translation and Interpreting Technology (TRITON)},
+  publisher = {INCOMA Ltd.},
 	pages = {110-124},
 	year = {2021},
+  address = {Virtual},
   url = {http://triton-conference.org/proceedings/},
   abstract = {{Communication between healthcare professionals and deaf patients is challenging, and the current COVID-19 pandemic makes this issue even more acute. Sign language interpreters can often not enter hospitals and face masks make lipreading impossible. To address this urgent problem, we developed a system which allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 into Sign Language of the Netherlands (NGT). Translations are displayed by means of videos and avatar animations. The architecture of the system is such that it could be extended to other applications and other sign languages in a relatively straightforward way.}}
+}
+
+@inproceedings{Gemert:22,
+  title = {First Steps Towards a Signing Avatar for Railway Travel Announcements in the {Netherlands}},
+  author = {Gemert, Britt van and Cokart, Richard and Esselink, Lyke and Meulder, Maartje de and Sijm, Nienke and Roelofsen, Floris},
+  booktitle = {Proceedings of the 7th International Workshop on Sign Language Translation and Avatar Technology (SLTAT): The Junction of the Visual and the Textual: Challenges and Perspectives},
+  publisher = {European Language Resources Association},
+  pages = {109--116},
+  year = {2022},
+  address = {Marseille, France},
+  url = {https://aclanthology.org/2022.sltat-1.17.pdf},
+  abstract = {This paper presents first steps towards a sign language avatar for communicating railway travel announcements in Dutch Sign Language. Taking an interdisciplinary approach, it demonstrates effective ways to employ co-design and focus group methods in the context of developing sign language technology, and presents several concrete findings and results obtained through co-design and focus group sessions which have not only led to improvements of our own prototype but may also inform the development of signing avatars for other languages and in other application domains.}
 }
 
 @unpublished{Corsel:20,
