--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -233,12 +233,12 @@
 @inproceedings{Roelofsen:21b,
   title = {Sign language translation in a healthcare setting},
   author = {Roelofsen, Floris and Esselink, Lyke and Mende-Gillings, Shani and Smeijers, Anika},
-	booktitle = {Translation and Interpreting Technology (TRITON)},
+	booktitle = {Proceedings of the Translation and Interpreting Technology Online Conference (TRITON)},
   publisher = {INCOMA Ltd.},
 	pages = {110-124},
 	year = {2021},
   address = {Virtual},
-  url = {http://triton-conference.org/proceedings/},
+  url = {https://aclanthology.org/2021.triton-1.13.pdf},
   abstract = {{Communication between healthcare professionals and deaf patients is challenging, and the current COVID-19 pandemic makes this issue even more acute. Sign language interpreters can often not enter hospitals and face masks make lipreading impossible. To address this urgent problem, we developed a system which allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 into Sign Language of the Netherlands (NGT). Translations are displayed by means of videos and avatar animations. The architecture of the system is such that it could be extended to other applications and other sign languages in a relatively straightforward way.}}
 }
 
