--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -117,7 +117,7 @@
   abstract = {In a seminal paper, Benedicto & Brentari (2004) present a theoretical proposal in which they analyze American Sign Language (ASL) classifier morphemes as instantiations of functional heads F1 and F2 that determine the external or internal position of the argument that lands in their specifier through a structural agreement relation. It has served as a ground for several follow-up studies investigating argument structure in sign language classifier constructions. However, their proposal requires both theoretical amendment and empirical corroboration. In this paper, I critically assess the proposal by Benedicto & Brentari (2004) and provide empirical support for a modified version.}
 }
 
-@article{oomen:20,
+@article{oomen:20a,
   title = {Spatial verbs are demonstration verbs},
   author = {Oomen, Marloes},
   journal = {Revista Lingu{\'\i}stica},
@@ -130,7 +130,7 @@
   abstract = {The literature has been divided over the question of whether spatial verbs should be subsumed into a single verb class with agreement verbs. The main point of contention has been that, even if the nature of the elements that these verb types agree with differs, the morphosyntactic mechanism, i.e. a path movement, appears to be the same. Contributing to this debate, this corpus-based study scrutinizes the morphosyntactic properties of a set of spatial verbs in German Sign Language (DGS). It is shown that spatial verbs display striking variability in where they begin and end their movement in space. They may align with locations or person loci, but often they simply mark arbitrary locations, which may convey meaningful yet less specific information about the (direction of) movement of a referent relative to the signer. Furthermore, null subjects are found to occur remarkably often in constructions with spatial verbs, despite the absence of systematic subject marking on the verb itself. These results stand in contrast with those reported for regular agreement verbs in DGS (OOMEN, 2020), and thus provide support for a distinction between the two types. It is proposed that spatial verbs in DGS involve a demonstration component (cf. DAVIDSON, 2015) which ensures the recoverability of referents involved in the event denoted by the verb, thus loosening the restrictions on both agreement marking and subject drop that apply to regular agreement verbs. As such, spatial verbs are argued to be somewhere in between conventionalized lexical verbs and classifier predicates.}
 }
 
-@phdthesis{oomen:21a,
+@phdthesis{oomen:20b,
   title = {Iconicity as a mediator between verb semantics and morphosyntactic structure: a corpus-based study on verbs in German Sign Language},
   author = {Oomen, Marloes},
   publisher = {Netherlands Graduate School of Linguistics {(LOT)}},
@@ -142,7 +142,7 @@
   url = {https://www.researchgate.net/profile/Marloes-Oomen/publication/341178832_Iconicity_as_a_mediator_between_verb_semantics_and_morphosyntactic_structure_A_corpus-based_study_on_verbs_in_German_Sign_Language/links/5eb26e6f92851cbf7fa9492f/Iconicity-as-a-mediator-between-verb-semantics-and-morphosyntactic-structure-A-corpus-based-study-on-verbs-in-German-Sign-Language.pdf}
 }
 
-@book{oomen:21b,
+@book{oomen:21,
   title = {Iconicity and Verb Agreement: A Corpus-Based Syntactic Analysis of German Sign Language},
   author = {Oomen, Marloes},
   publisher = {De Gruyter Mouton},
@@ -196,6 +196,48 @@
   year = {2021},
   doi = {10.1093/oxfordhb/9780198795858.013.31},
   url = {https://watermark.silverchair.com/303222023.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAAsQwggLABgkqhkiG9w0BBwagggKxMIICrQIBADCCAqYGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMAM4265XWzaPig-A1AgEQgIICd4bTyMHkxH5x94H-3xgHeMC-KCtNdBW0tnBEJ16xiMm57KFcg7pgUnG8rqAhJYSBE3rX0vGkrTnDxt-lMawtzO5h7h-rx2lOIDnKzuByTbc4Tn9fi0TvuGjSqWqbFF7Tv8eU-2UmFcTbU28iHrp64ZGBpMY-8rxAdBW1K-sadkMVh0tzKgrfx76KZaAG2W_EnBX1xfdIW9hMaRrTeJ64rFAaKifrL8FrQ7hkyibqqEwaIMAsNkOE6nxzCRW8uZ8iSdKJMwAdIF5UYt9yvbjmavELriA2fzxYthELFPCfkH6L8wT10B0_DgKVwURP_SzyXrnSwKuIQspmpi9rxtIAPrPPvtULyka9B4mJN3_5bUmWCmHBIzg6dQMjoo9VnbE3LK3scgAr1QsUaZJZOcVMBJWbU9C70m60rItcNpvSBTYurjRjorX6cL9LIlXaTYHKauEyfRibi-5Mrxjya1uVY4j-oruZWuqQdXbtYl2ZiorXaUsHQFbYvuk2LLdlfjgRgpzkwdU-WEjY825ZZJzGjAnrSTovMk62RRKqzpHbzax3okEvARsZvc4u4i5CJOuCmR1UxtPtwwIVC2ruaiakCmpCh2BLx-VbOTmlqHoVLk6cn7-Uq_1T7N3fAKfDyvmH3FSmPl8trwFUSuAM2EHykj93r-Vgc4Fre7WWBFgX7uXv2GTnzHWzXPAUeCoqiqJyivNnkqwXSRkB9mMc2D7TR-76btmjAjnyMMLQ7sN0VuC0TdKPobDMd5gG3FYxZOlIWrTQ5orMacdav7NJNb_zLIhJMDiCtSQiyNIu-EXGCpQ8EFYAZsouLrwWE-QUkCFznZIc9L5Xtr0}
+}
+
+@article{pfau:22,
+  title = {Negation and Negative Concord in Georgian Sign Language},
+  author = {Pfau, Roland and Makharoblidze, Tamar and Zeijlstra, Hedde},
+  journal = {Frontiers in Psychology},
+  volume = {13},
+  number = {734845},
+  year = {2022},
+  publisher = {Frontiers Media SA},
+  doi = {10.3389/fpsyg.2022.734845},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9333067/},
+  abstract = {Negation is a topic that has received considerable attention ever since the early days of sign language linguistics; also, it is one of the grammatical domains that has given the impetus for sign language typology. In this paper, we offer a typological and theoretical contribution to the study of sign language negation. As for the typological side, we add Georgian Sign Language (GESL) to the pool of languages investigated. Our description reveals that GESL displays a number of typologically unusual features: a considerable number of negative particles, including emphatic, prohibitive, and tense-specific particles; specialized negative modals; and a wide range of possibilities for Negative Concord (NC) involving two manual negative signs, including a unique tense-specific instance of NC. Most of the patterns we report -- available negative particles, their clausal position, and NC possibilities -- are clearly different from those attested in spoken Georgian. As for the theoretical contribution, we investigate how the highly complex GESL negation system compares to existing taxonomies of NC and Double Negation systems, and we conclude that GESL aligns with certain languages that have been classified as atypical NC languages.},
+  note = {Special issue "Sign language research sixty years later: current and future perspectives"}
+}
+
+@article{hartmann:21,
+  title = {Asymmetry and contrast: Coordination in Sign Language of the Netherlands},
+  author = {Hartmann, Katharina and Pfau, Roland and Legeland, Iris},
+  journal = {Glossa: a journal of general linguistics},
+  volume = {6},
+  number = {1},
+  year = {2021},
+  pages = {1--33},
+  doi = {10.16995/glossa.5872},
+  url = {https://www.glossa-journal.org/article/id/5872/},
+  abstract = {This paper investigates coordination in Sign Language of the Netherlands (NGT). We offer an account for a typologically unusual coordination pattern found in this language. We show that the conjuncts of a coordinated structure in NGT may violate a constraint governing coordinated structures in spoken languages, which we refer to as the ‘Parallel Structure Constraint’. The violation consists in asymmetric fronting in the second conjunct of a coordinated structure. We argue that a violation of the Parallel Structure Constraint is acceptable in NGT in order to express a contrast across the conjuncts. Hence asymmetric reordering in the second conjunct is a strategy that allows signers to obtain the desired strength of marking when in situ marking is insufficient.},
+  publisher={Open Library of Humanities}
+}
+
+@article{lutzenberger:22,
+  title = {Emergence or Grammaticalization? The Case of Negation in Kata Kolok},
+  author = {Lutzenberger, Hannah and Pfau, Roland and Vos, Connie de},
+  journal = {Languages},
+  volume = {7},
+  number = {1},
+  pages = {23},
+  year = {2022},
+  publisher = {MDPI},
+  doi = {10.3390/languages7010023},
+  url = {https://www.mdpi.com/2226-471X/7/1/23/htm},
+  abstract = {Typological comparisons have revealed that signers can use manual elements and/or a non-manual marker to express standard negation, but little is known about how such systematic marking emerges from its gestural counterparts as a new sign language arises. We analyzed 1.73 h of spontaneous language data, featuring six deaf native signers from generations III-V of the sign language isolate Kata Kolok (Bali). These data show that Kata Kolok cannot be classified as a manual dominant or non-manual dominant sign language since both the manual negative sign and a side-to-side headshake are used extensively. Moreover, the intergenerational comparisons indicate a considerable increase in the use of headshake spreading for generation V which is unlikely to have resulted from contact with Indonesian Sign Language varieties. We also attest a specialized negative existential marker, namely, tongue protrusion, which does not appear in co-speech gesture in the surrounding community. We conclude that Kata Kolok is uniquely placed in the typological landscape of sign language negation, and that grammaticalization theory is essential to a deeper understanding of the emergence of grammatical structure from gesture.}
 }
 
 @book{quer:21,
@@ -261,7 +303,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/0bb6b586-7133-49ad-b722-2cfc08555dcc/content},
   keywords = {bachelorsthesis},
   abstract = {This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware. Specifically, translation of Dutch into Sign Language of the Netherlands (NGT). As Dutch has been translated to a textual version of NGT in previous research, this research translated from textual NGT to synthesised NGT, the output signed by an avatar. This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources, the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression, a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers paired with interrogative and negative constructs in NGT. Although the scope of this project is limited, it could provide a decent foundation for further research.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Mende-Gillings:20,
@@ -271,7 +313,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/6d3b7a8d-3927-4032-8837-a91659a48a9d/content},
   keywords = {bachelorsthesis},
   abstract = {Hearing parents who have deaf children are often put in a difficult position. They most likely know no sign language and resources for learning are limited and expensive. Research into sign language translation and synthesis has increased in the past two decades, due to a growing interest into making public spaces and services more accessible to Deaf people.<br> This research looks at the potential of a translator from Dutch to Dutch sign language (NGT) using a sign language avatar. In particular the focus lies on the synthesis of directional verbs, a critical grammatical component of sign language. The implementation is very limited and therefore the sentences it produces are not always comprehensible and the signs do not always look natural. It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Esselink:20,
@@ -281,7 +323,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/90908bfa-d553-42f9-a191-2f9249686a9c/content},
   keywords = {bachelorsthesis},
   abstract = {Deaf people oftentimes have no choice but to communicate in the lingua franca of their country, despite the fact that this is a second language for them. Their ability to read and write is significantly worse than that of a hearing person. Additionally, if a deaf child is born into a family of hearing parents, it is vital that the parents communicate with the child through sign language as soon as possible, otherwise the language region of that child's brain will be underdeveloped. There are currently few resources available for people to learn Sign Language of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br> This thesis investigates what components are necessary to build a system that uses an avatar to translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on the matter, three main components are devised and implemented: software for sign language synthesis, lexical resources for encoding signs, and grammatical resources for structuring sentences. Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers correctly. However, the corpus contains a number of errors and of which manual errors and unnatural mouth signs should particularly be improved. Moreover, further research is necessary to improve the comprehensibility of signs.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Esselink:21,
@@ -309,7 +351,7 @@
   url = {https://dspace.uba.uva.nl/server/api/core/bitstreams/5f83a355-f4c2-4bd6-b263-885a9d6a6df6/content},
   keywords = {bachelorsthesis},
   abstract = {Deaf people can have a reading and writing delay due to the fact that the sign language of their country is their first language. Most hearing people do not understand sign language. This causes a language barrier to exist between deaf and hearing people. While tools like Google Translate support many languages, not a single sign language is included. This research reduces the language barrier between deaf and hearing people by developing a synthesis tool for sign language. This research focuses on evaluating different gaming and Virtual Reality avatar animation software to create signing avatars used for the synthesis tool. It also looks at converting motion capture data in to animations for the signing avatars. This conversion is implemented fully for one avatar. The resulting animation shows some unnatural movement but looks promising.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Gennissen:22,
@@ -319,7 +361,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/a4d4666b-27aa-4a7f-99f8-e13621d2b91d/download},
   keywords = {bachelorsthesis},
   abstract = {This thesis explores the effect of mouth visualizations on modern avatars as support for speech comprehension. The mouth visualizations of the avatars were acquired by two state-of-the-art facial visualization methods in the field of deep learning and computer vision. An initial exploration was performed to inspect the possibilities and advantages of the two methods. Furthermore, the two methods were tested on their applicability to the Dutch language and the Dutch Sign Language (NGT). To analyze the effect of different kinds of avatars on speech comprehensibility, a survey experiment was conducted to gather information on the performance and opinions of participants.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Atia:22,
@@ -329,7 +371,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/7a1dbcc9-2e6f-428f-8e13-ee65c504399e/download},
   keywords = {bachelorsthesis},
   abstract = {It is of great importance to make Dutch Sign Language (NGT) accessible to hearing people in order to improve the relationship between the deaf and hearing communities. We want to achieve this by creating an application that converts Dutch text to NGT performed by an avatar. To achieve this, an avatar must be created that is able to perform the different components of speaking sign language. In this research, the approach will be to let the avatar adapt motions performed by real live NGT speakers using a motion tracker. The results of previous research showed that gestures with specific finger positions, mainly when fingers overlap, were difficult to track. This research solves this problem by recording a NGT speaker from different views, and combining the results using a rigid body transformation. This way, the number of detected outliers are reduced significantly. The addition of cameras provides more insight into depth usage and estimation of the z-axis. It enables to detect bodyparts that are blocked from the main camera, which leads to more accurate tracking of gestures.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 
@@ -340,7 +382,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/fc79c65e-e35c-411e-bced-052a55ed8300/download},
   keywords = {bachelorsthesis},
   abstract = {This thesis explores the implementation for visualising the translation from Dutch sentences to the sign language of the Netherlands (NGT). This is one of three theses, each focusing on different parts of the avatar, which are eventually combined into one program. For this thesis, the goal is to implement a part of the non-manual side of NGT to create a proof of concept. The non-manual body parts of NGT include the head, face, shoulders and upper body. NGT is a complex language. Therefore it will take more time to completely visualize NGT using a new modern avatar, but this thesis provides a foundation for further research and implementation of the non-manual gestures of NGT.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 @unpublished{Vijver:21,
@@ -350,7 +392,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/128a1797-658b-49c2-8562-9cd1d3f81872/download},
   keywords = {bachelorsthesis},
   abstract = {For deaf people, the written and spoken language of their country is often their second language. The first language for most deaf people is the sign language of their country. Because deaf people often have a reading and writing delay and not many hearing people speak sign language, a barrier is formed between deaf people who speak sign language and hearing people who do not. To overcome this problem ’signing avatars’ have been researched in the past decade: 3D computer models that can perform sign language. For the Dutch sign language and many other sign languages, the animation techniques that are used for this are deprecated. This research is focused on using modern techniques for animating these signing avatars. A model was built that shows potential in using these modern techniques to perform signs that are described in a dedicated markup language.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 
@@ -361,7 +403,7 @@
   url = {https://dspace.uba.uva.nl/bitstreams/473c469e-4102-4133-9e53-e377263d5782/download},
   keywords = {bachelorsthesis},
   abstract = {Loss of hearing at young age has devastating effects on the development of a child. One of these effects is a learning deficit. This learning deficit can be strongly mitigated by introducing sign language as soon as deafness is diagnosed. However, most of deaf children are born to hearing parents who can not speak the Dutch Sign Language (NGT). Language acquisition of NGT is difficult for Dutch speaking people, since NGT has its own grammar and vocabulary. The main purpose of this thesis is to find out if modern avatar simulation techniques can be used to create a virtual sign language avatar to aid the learning process of NGT. Results show that modern software is applicable, but three main components are needed by the software in order to do so. A phonetic representation of the sign, a compatible rig with as many control points as needed by the phonetic representation and animation software to alter the orientation/position of the control points.},
-  note = {University of Amsterdam}
+  note = {Bachelor's thesis, University of Amsterdam}
 }
 
 
@@ -372,7 +414,7 @@
   url = {https://www.signlab-amsterdam.nl/publications/Bleijlevens-2020.pdf},
   keywords = {bachelorsthesis},
   abstract = {This project studies the possibilities of designing an online platform for acquiring Dutch Sign Language (NGT), specifically focused on parents of deaf children. Children need a lot of (diverse) language input to lay a groundwork for their language development and it is thus important that people in their surroundings speak a language the child can interpret. Over the past decades, a lot of different distance learning technology have been developed for second language acquisition. This research will look into NGT and discuss all the grammatical topics which should be explained to people wanting to learn the language. Then, different technologies and will analyse which would suit learning NGT the best. Lastly, the two research topics will be combined and a design for a platform is proposed.},
-  note = {Amsterdam University College}
+  note = {Bachelor's thesis, Amsterdam University College}
 }
 
 @article{sumer:20,
@@ -431,9 +473,11 @@
 
 @article{gur:22,
   title = {Learning to introduce referents in narration is resilient to the effects of late sign language exposure},
-  author = {Gur, C and S{\"u}mer, Beyza},
+  author = {G{\"u}r, C and S{\"u}mer, Beyza},
   journal = {Sign Language \& Linguistics},
-  year = {2022}
+  year = {2022},
+  volume = {25},
+  number = {2}
 }
 
 @article{sumer:22,
